--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ section {
     font-weight: bold;
     margin-bottom: 20px;
     animation: fadeIn 2s ease-in-out;
-    color: #000;
+    color: crimson;
 }
 body.dark-mode .hero-content p {
     color: #fff; /* White or any color suitable for dark mode */
